samples/_failures_safe/1761490421_c56aff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_502075dd.c: In function ‘parse_operator’:
./samples/SAFE/__tmp_502075dd.c:150:51: error: expected ‘]’ at end of input
  150 |     char first_char = state->input[state->position
      |                                                   ^
      |                                                   ]
./samples/SAFE/__tmp_502075dd.c:150:5: error: expected declaration or statement at end of input
  150 |     char first_char = state->input[state->position
      |     ^~~~
